[gd_scene load_steps=23 format=2]

[ext_resource path="res://Fontes/Futura Extra Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Action RPG Resources/FlappyBrahma/Brahma2.png" type="Texture" id=2]
[ext_resource path="res://Action RPG Resources/FlappyBrahma/backGroundEdit1.png" type="Texture" id=3]
[ext_resource path="res://Action RPG Resources/FlappyBrahma/perdeu.png" type="Texture" id=4]
[ext_resource path="res://Action RPG Resources/FlappyBrahma/Brahma1.png" type="Texture" id=5]
[ext_resource path="res://Action RPG Resources/FlappyBrahma/Barril1.png" type="Texture" id=6]
[ext_resource path="res://Action RPG Resources/FlappyBrahma/Barril.png" type="Texture" id=7]
[ext_resource path="res://Action RPG Resources/FlappyBrahma/Brahma.png" type="Texture" id=8]
[ext_resource path="res://Scripts/FlappyBrahma.gd" type="Script" id=9]
[ext_resource path="res://Action RPG Resources/Texture/voltar.png" type="Texture" id=10]
[ext_resource path="res://Action RPG Resources/Texture/Baixo.png" type="Texture" id=11]
[ext_resource path="res://Action RPG Resources/Texture/baixoON.png" type="Texture" id=12]
[ext_resource path="res://Action RPG Resources/Texture/cimaON.png" type="Texture" id=13]
[ext_resource path="res://Action RPG Resources/Texture/Cima.png" type="Texture" id=14]
[ext_resource path="res://Action RPG Resources/Texture/fecharIcon.png" type="Texture" id=15]
[ext_resource path="res://Action RPG Resources/Texture/fecharIconPressed.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 17.0798
height = 73.989

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 23, 72.4787 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 25, 292.2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 297.4 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 771, 372 )
scale = Vector2( 1.6575, 2.45898 )
current = true
zoom = Vector2( 4.8, 4.2 )

[node name="Fundo" type="Sprite" parent="."]
position = Vector2( 1829, 239 )
scale = Vector2( 1.6575, 2.45898 )
texture = ExtResource( 3 )

[node name="BrahmaVoadora" type="KinematicBody2D" parent="."]

[node name="bhramaImagens" type="AnimatedSprite" parent="BrahmaVoadora"]
position = Vector2( 81, 71 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BrahmaVoadora"]
position = Vector2( 79, 83 )
rotation = 1.26583
shape = SubResource( 7 )

[node name="Barrius" type="Area2D" parent="."]
position = Vector2( 515, -197 )

[node name="column1" type="Sprite" parent="Barrius"]
position = Vector2( 480, 698 )
texture = ExtResource( 7 )

[node name="column2" type="Sprite" parent="Barrius"]
position = Vector2( 480, -58 )
texture = ExtResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Barrius"]
position = Vector2( 480.95, 320.248 )
shape = SubResource( 5 )

[node name="Cima" type="Area2D" parent="Barrius"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Barrius/Cima"]
position = Vector2( 480, -53 )
shape = SubResource( 4 )

[node name="Baixo" type="Area2D" parent="Barrius"]

[node name="CollisionShape2D1" type="CollisionShape2D" parent="Barrius/Baixo"]
position = Vector2( 480, 700 )
shape = SubResource( 3 )

[node name="perdeu" type="Sprite" parent="."]
position = Vector2( 751, 254 )
scale = Vector2( 1.52052, 1.6125 )
texture = ExtResource( 4 )

[node name="score" type="Label" parent="."]
margin_left = 722.0
margin_top = 28.0
margin_right = 788.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bhramaCima" type="TouchScreenButton" parent="."]
position = Vector2( 1412, 555 )
scale = Vector2( 0.85, 0.85 )
normal = ExtResource( 14 )
pressed = ExtResource( 13 )

[node name="bhramaBaixo" type="TouchScreenButton" parent="."]
position = Vector2( 1412, 662 )
scale = Vector2( 0.83, 0.83 )
normal = ExtResource( 11 )
pressed = ExtResource( 12 )

[node name="restartTouch" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 117, 606 )
scale = Vector2( 1.28, 1.28 )
normal = ExtResource( 10 )
pressed = ExtResource( 10 )

[node name="fecharTouch" type="TouchScreenButton" parent="."]
position = Vector2( -1, 644 )
scale = Vector2( 0.545, 0.545 )
normal = ExtResource( 15 )
pressed = ExtResource( 16 )

[connection signal="body_exited" from="Barrius" to="." method="_passouBarril"]
[connection signal="body_entered" from="Barrius/Cima" to="." method="_bateuBarril"]
[connection signal="body_entered" from="Barrius/Baixo" to="." method="_bateuBarril"]
[connection signal="pressed" from="bhramaCima" to="." method="_bhramaCimaPressed"]
[connection signal="pressed" from="bhramaBaixo" to="." method="_bhramaBaixoPressed"]
[connection signal="pressed" from="restartTouch" to="." method="_restartGamePressed"]
[connection signal="pressed" from="fecharTouch" to="." method="_fecharTouch"]
